--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/Action/executionPublishing/jdo/ActionExecutionPublishingJdo-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/Action/executionPublishing/jdo/ActionExecutionPublishingJdo-description.adoc
@@ -2,13 +2,13 @@
 
 WARNING: TODO publishing was renamed to executionPublishing
 
-The `publishing` element specifies that the invocation of an object action should be published to registered implementation(s) of link:https://causeway.apache.org/refguide/2.0.0-M3/applib-svc/PublisherService.html#spi[`PublisherService` SPI].
+The `publishing` element specifies that the invocation of an object action should be published to registered implementation(s) of link:https://causeway.apache.org/refguide/${CAUSEWAY_VERSION}/applib/index/services/publishing/spi/ExecutionSubscriber.html#spi[`ExecutionSubscriber` SPI].
 
 This is performed _after_ the action has been invoked.
 
 The publishing from the framework to the SPI is in-memory.
 A typical SPI implementation would then publish over the network, or perhaps store in a database.
-(Note that the framework provides an link:https://causeway.apache.org/mappings/2.0.0-M3/outbox-publisher/about.html[out-of-the-box implementation] of the link:https://microservices.io/patterns/data/transactional-outbox.html[outbox pattern]).
+(Note that the framework provides an link:https://causeway.apache.org/userguide/${CAUSEWAY_VERSION}/executionoutbox/about.html[out-of-the-box implementation] of the link:https://microservices.io/patterns/data/transactional-outbox.html[outbox pattern]).
 
 The element can be specified using either the `@Action` annotation, or through a meta-annotation.
 
