--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/mixinMethod/DomainObjectMixinMethodVm-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/mixinMethod/DomainObjectMixinMethodVm-description.adoc
@@ -5,7 +5,9 @@ The `mixinMethod` attribute ...
 WARNING: TODO[CAUSEWAY-3312]
 Applicable only if #nature() is Nature#MIXIN , indicates the name of the method within the mixin class to be inferred as the action of that mixin.
 Supporting methods are then derived from that method name. For example, if the mixin method name is "act", then the disable supporting method will be "disableAct".
-Typical examples are "act", "prop", "coll", "exec", "execute", "invoke", "apply" and so on. The default name is $$.
-NOTE: it's more typical to instead use xref:refguide:applib:index/annotation/Action.adoc[Action] , xref:refguide:applib:index/annotation/Property.adoc[Property] or xref:refguide:applib:index/annotation/Collection.adoc[Collection] as the class-level annotation, indicating that the domain object is a mixin. The mixin method name for these is, respectively, "act", "prop" and "coll".
+Typical examples are "act", "prop", "coll", "exec", "execute", "invoke", "apply" and so on.
+The default name is $$.
+NOTE: it's more typical to instead use https://causeway.apache.org/refguide/${CAUSEWAY_VERSION}/applib/index/annotation/Action.html[Action] , https://causeway.apache.org/refguide/${CAUSEWAY_VERSION}/applib/index/annotation/Property.html[Property] or https://causeway.apache.org/refguide/${CAUSEWAY_VERSION}/applib/index/annotation/Collection.html[Collection] as the class-level annotation, indicating that the domain object is a mixin.
+The mixin method name for these is, respectively, "act", "prop" and "coll".
 
 
