--- a/antora/components/refguide/modules/applib-classes/pages/value-types.adoc
+++ b/antora/components/refguide/modules/applib-classes/pages/value-types.adoc
@@ -53,4 +53,4 @@ The framework also defines a number of custom value types:
 * xref:refguide:applib:index/value/Password.adoc[Password]
 
 In addition, there are a number of non-core value types that can be brought in individually.
-These can be found in the xref:valuetypes:ROOT:about.adoc[Value Type Catalog].
+These can be found in the catalog of xref:valuetypes:ROOT:about.adoc[Value Types].
