--- a/antora/components/relnotes/modules/ROOT/pages/2020/2.0.0-M3/relnotes.adoc
+++ b/antora/components/relnotes/modules/ROOT/pages/2020/2.0.0-M3/relnotes.adoc
@@ -28,7 +28,7 @@ This milestone also introduces a number of new features:
 * New extensions:
 ** xref:userguide:flyway:about.adoc[Flyway] (integrating with Spring Boot's support)
 ** xref:vro:cors:[CORS] for the REST API (xref:vro:ROOT:about.adoc[REST API (Restful Objects viewer)])
-** xref:vw:pdfjs:about.adoc[pdf.js] (for xref:vw:ROOT:about.adoc[Web UI (Wicket viewer)])
+** xref:vw:pdfjs:about.adoc[PDF.js] (for xref:vw:ROOT:about.adoc[Web UI (Wicket viewer)])
 ** xref:vw:fullcalendar:about.adoc[fullcalendar] (for xref:vw:ROOT:about.adoc[Web UI (Wicket viewer)])
 ** xref:vw:exceldownload:about.adoc[excel download] (for xref:vw:ROOT:about.adoc[Web UI (Wicket viewer)])
 
