--- a/security/adoc/modules/ROOT/partials/extensions.adoc
+++ b/security/adoc/modules/ROOT/partials/extensions.adoc
@@ -1,6 +1,6 @@
-include::security:shiro-realm-ldap:partial$module-nav.adoc[]
-include::security:spring-oauth2:partial$module-nav.adoc[]
-include::security:secman:partial$module-nav.adoc[]
+** xref:security:secman:about.adoc[SecMan]
 include::security:audittrail:partial$module-nav.adoc[]
+include::security:spring-oauth2:partial$module-nav.adoc[]
+include::security:shiro-realm-ldap:partial$module-nav.adoc[]
 include::security:sessionlog:partial$module-nav.adoc[]
 
