--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/aliased/jpa/CustomerJpa-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/aliased/jpa/CustomerJpa-description.adoc
@@ -2,7 +2,7 @@
 
 [source,java,indent=0]
 ----
-include::AddressJpa.java[tags=class]
+include::CustomerJpa.java[tags=class]
 ----
 <.> current logical type name
 <.> previous logical type names
