--- a/antora/components/relnotes/modules/ROOT/pages/about.adoc
+++ b/antora/components/relnotes/modules/ROOT/pages/about.adoc
@@ -6,8 +6,6 @@
 
 This table summarises all releases of Apache Causeway v2.0 to date.
 
-////
-////
 
 [cols="2,2,4a,>1,>1,>1,3a"]
 |===
@@ -20,8 +18,8 @@ This table summarises all releases of Apache Causeway v2.0 to date.
 | Detail
 
 | 2.0.0-RC1
-|
-| First release candidate for Apache Causeway 2.0.0
+| 25-Mar-2023
+| First release candidate for Apache Causeway 2.0.0.  Project renamed.
 | 16
 | 13
 | 39
